[gd_scene load_steps=2 format=3 uid="uid://clxl1gighe78l"]

[ext_resource type="Script" path="res://UI/BetterSlider/better_slider.gd" id="1_dnfx4"]

[node name="BetterSlider" type="HBoxContainer" groups=["InputsUIs"]]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_dnfx4")

[node name="BetterSliderLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
text = "Test : "

[node name="SpinBoxValue" type="SpinBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0

[node name="SliderValue" type="HSlider" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
mouse_filter = 1

[connection signal="focus_exited" from="SpinBoxValue" to="." method="_on_spin_box_value_focus_exited"]
[connection signal="value_changed" from="SpinBoxValue" to="." method="_on_spin_box_value_value_changed"]
[connection signal="drag_ended" from="SliderValue" to="." method="_on_slider_value_drag_ended"]
[connection signal="value_changed" from="SliderValue" to="." method="_on_slider_value_value_changed"]
